[gd_scene load_steps=7 format=3 uid="uid://dopij0wah24k"]

[ext_resource type="Script" uid="uid://bf1qu1jcjfb5" path="res://Scripts/UI/TableManager/snooker_table_manager_button.gd" id="1_jcuwd"]
[ext_resource type="Script" uid="uid://bjotyu574dxdn" path="res://Scripts/UI/TableManager/turn_on_off.gd" id="2_maolu"]
[ext_resource type="Script" uid="uid://bh0ik17p2sowv" path="res://Scripts/UI/TableManager/sell_table.gd" id="3_8c6aw"]
[ext_resource type="Script" uid="uid://bx5ihh6phu54f" path="res://Scripts/UI/table_number_label.gd" id="4_wu2fr"]

[sub_resource type="LabelSettings" id="LabelSettings_jcuwd"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_maolu"]
font_size = 8
font_color = Color(0, 0, 0, 1)

[node name="SnookerTableManagerButton" type="Control"]
custom_minimum_size = Vector2(133, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 131.0
offset_bottom = 180.0
script = ExtResource("1_jcuwd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 222.0
offset_bottom = 295.0
scale = Vector2(0.588074, 0.612019)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 126.0
offset_right = 229.0
offset_bottom = 227.0
scale = Vector2(0.468006, 0.483854)

[node name="TurnOnOff" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Turn on/off"
script = ExtResource("2_maolu")

[node name="CleanTable" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Clean"

[node name="SellTable" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sell"
script = ExtResource("3_8c6aw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 30.0
offset_right = 130.0
offset_bottom = 179.0
scale = Vector2(0.588074, 0.612019)
color = Color(0.188824, 0.862662, 0.434706, 1)

[node name="TableNumber" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 22.1061
offset_top = 42.4823
offset_right = 62.1061
offset_bottom = 98.4823
scale = Vector2(1.18764, 1.24426)
text = "99"
label_settings = SubResource("LabelSettings_jcuwd")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_wu2fr")

[node name="TableQualityLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(3.25227, 1.30665)
text = "Quality"
label_settings = SubResource("LabelSettings_maolu")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="turnedTableOn" from="VBoxContainer/TurnOnOff" to="." method="_on_turn_on_off_turned_table_on"]
